@@ -20,5 +20,6 @@ IMPROVEMENTS
   to run tests with subunit output. It then runs them and pipes into testr
   load. This allows simpler integration and permits a programming interface so
   that tools like Tribunal/Eclipe etc can refresh tests in a testrepository.
+  ``run`` also passes arguments and options down to the child process.
 
 * The command 'last' will no longer error on a new repository.
